Fixed the thing jumping on large resolutions

--- a/layouts/nsmbhd.css
+++ b/layouts/nsmbhd.css
@@ -7,14 +7,15 @@
 {
 	position:fixed;
 	top:35px;
-	right:6px;
+/*	right:6px;*/
 }
 .userpanel-fixed
 {
 	position:fixed;
 	top:0px;
-	right:0px;
+/*	right:0px;*/
 	border: 1px solid black;
+	padding-right:4px!important;
 }
 
 #userpanel
